fix some layout bugs

--- a/src/less/themes/angular/lesson.less
+++ b/src/less/themes/angular/lesson.less
@@ -42,8 +42,9 @@
     text-transform: none;
   }
   .btn-expand {
-    // position: absolute;
-    // bottom: 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
     margin-right: 10px;
     background-color: transparent;
     color: #ffffff;
