--- a/src/less/themes/angular/style.less
+++ b/src/less/themes/angular/style.less
@@ -15,6 +15,9 @@ body {
       color: #ffffff;
     }
   }
+  & + .btn {
+    margin: 0 5px;
+  }
 }
 .btn-group.disabled {
   cursor: not-allowed;
@@ -265,7 +268,8 @@ i.icon-close {
           & + i.btn-close {
             position: absolute;
             right: 10px;
-            top: 10px;
+            top: 12px;
+            color: #ffffff;
             &:before {
               font-size: 16px;
             }
@@ -321,7 +325,7 @@ i.icon-close {
   display: flex;
   align-items: center;
   position: absolute;
-  left: 0;
+  left: 50px;
   right: 0;
   bottom: 0; 
   height: 48px; // the padding bottom of class page-section + 1px to make sure it fills up
